--- a/debian/control
+++ b/debian/control
@@ -1,4 +1,4 @@
-Source: ledgersmb
+Source: ledgersmb12
 Section: web
 Priority: optional
 Maintainer: Debian LedgerSMB Team <pkg-sql-ledger-discussion@lists.alioth.debian.org>
