--- a/ledger-smb/branches/v1.3/debian/control
+++ b/ledger-smb/branches/v1.3/debian/control
@@ -6,7 +6,7 @@ Uploaders: Robert James Clay <jame@rocasa.us>
 Build-Depends: debhelper (>= 8), po-debconf, libmodule-install-perl
 Standards-Version: 3.9.4
 Homepage: http://www.ledgersmb.org/
-Vcs-Svn: svn://svn.debian.org/pkg-sql-ledger/ledger-smb/trunk
+Vcs-Svn: svn://anonscm.debian.org/pkg-sql-ledger/ledger-smb/trunk
 Vcs-Browser: http://anonscm.debian.org/viewvc/pkg-sql-ledger/ledger-smb/trunk/
 
 Package: ledgersmb
