--- a/debian/rules
+++ b/debian/rules
@@ -22,6 +22,7 @@ override_dh_auto_install:
 override_dh_install:
 	dh_install
 	chmod -x debian/ledgersmb-1.2/usr/share/ledgersmb-1.2/bin/*
+	chmod -x debian/ledgersmb-1.2/var/lib/ledgersmb-1.2/css/*
 	chmod -x debian/ledgersmb-1.2/usr/share/ledgersmb-1.2/locale/po/*
 	chmod +x debian/ledgersmb-1.2/usr/share/ledgersmb-1.2/upgrade-templates.pl
 	find debian/ledgersmb-1.2/etc/ledgersmb-1.2 -d -not -exec chmod -x '{}' \;
