Initial packaging changes for Apache v2.2/v2.4 LedgerSMB configuration installation.
git-svn-id: svn+ssh://svn.debian.org/svn/pkg-sql-ledger/ledger-smb/branches/v1.3@690 c065a19f-0a03-0410-aadb-caf30d9ec67c

--- a/debian/rules
+++ b/debian/rules
@@ -9,6 +9,7 @@ override_dh_auto_configure:
     # needed for an installed LedgerSMB directory.
 	rm -rf LedgerSMB/Assets LedgerSMB/Entity
 	cp ledgersmb-httpd.conf.template ledgersmb-httpd-2.0-2.2.conf
+	cp debian/adm/ledgersmb-httpd.2.4.conf ledgersmb-httpd-2.4.conf.template
 	cp pos.conf.pl.template pos.conf.pl
 	dh_auto_configure
 
