--- a/debian/rules
+++ b/debian/rules
@@ -19,7 +19,7 @@ override_dh_auto_install:
 
 override_dh_install:
 	rm -f blib/lib/install_interactive.pl
-	dh_install -XMIT-LICENSE
+	dh_install -XMIT-LICENSE -XGPL.txt
 
 override_dh_fixperms:
 	dh_fixperms
