--- a/debian/control
+++ b/debian/control
@@ -15,7 +15,7 @@ Depends: ${perl:Depends}, ${misc:Depends}, perl (>= 5.8.1-1), libconfig-std-perl
   libconfig-any-perl, libmime-lite-perl, libdbi-perl, libdbd-pg-perl, liberror-perl,
   liblocale-maketext-lexicon-perl (>= 0.62-1), libtemplate-perl (>=2.14-1),
   libhtml-parser-perl, liblog-log4perl-perl, libdatetime-perl, apache2 | httpd-cgi,
-  libcgi-simple-perl, libfile-mimeinfo-perl, libio-stringy-perl,
+  libcgi-simple-perl, libfile-mimeinfo-perl, libio-stringy-perl, libjs-scriptaculous,
   postgresql-client, postgresql-contrib, dbconfig-common
 Recommends: default-mta | mail-transport-agent, texlive-latex-recommended, libopenoffice-oodoc-perl,
   libmath-bigint-gmp-perl, libparse-recdescent-perl, libtemplate-plugin-latex-perl
