--- a/debian/rules
+++ b/debian/rules
@@ -24,6 +24,7 @@ override_dh_install:
 
 override_dh_fixperms:
 	dh_fixperms
+	chmod -x debian/ledgersmb-1.2/usr/share/ledgersmb-1.2/favicon.ico
 	chmod -x debian/ledgersmb-1.2/usr/share/ledgersmb-1.2/bin/*
 	chmod -x debian/ledgersmb-1.2/var/lib/ledgersmb-1.2/css/*
 	chmod -x debian/ledgersmb-1.2/usr/share/ledgersmb-1.2/locale/po/*
