--- a/debian/rules
+++ b/debian/rules
@@ -29,7 +29,7 @@ override_dh_fixperms:
 	chmod -x debian/ledgersmb-1.2/var/lib/ledgersmb-1.2/css/*
 	chmod -x debian/ledgersmb-1.2/usr/share/ledgersmb-1.2/locale/po/*
 	chmod +x debian/ledgersmb-1.2/usr/share/ledgersmb-1.2/upgrade-templates.pl
-	find debian/ledgersmb-1.2/etc/ledgersmb-1.2 -d -not -exec chmod -x '{}' \;
+	find debian/ledgersmb-1.2/etc/ledgersmb-1.2 -d -type f -not -exec chmod -x '{}' \;
 	find debian/ledgersmb-1.2/usr/share/ledgersmb-1.2 -name '*.html' -exec chmod -x '{}' \;
 	find debian/ledgersmb-1.2/usr/share/ledgersmb-1.2 -name '*.sh' -exec chmod +x '{}' \;
 	find debian/ledgersmb-1.2/usr/share/ledgersmb-1.2 -name '*.pm' -exec chmod -x '{}' \;
