Update fixing permissions for bin/*,pl files in debian/rules.

--- a/debian/rules
+++ b/debian/rules
@@ -25,7 +25,7 @@ override_dh_install:
 override_dh_fixperms:
 	dh_fixperms
 	chmod -x debian/ledgersmb-1.2/usr/share/ledgersmb-1.2/favicon.ico
-	chmod -x debian/ledgersmb-1.2/usr/share/ledgersmb-1.2/bin/*
+	chmod -x debian/ledgersmb-1.2/usr/share/ledgersmb-1.2/bin/*.pl
 	chmod -x debian/ledgersmb-1.2/var/lib/ledgersmb-1.2/css/*
 	chmod -x debian/ledgersmb-1.2/usr/share/ledgersmb-1.2/locale/po/*
 	chmod +x debian/ledgersmb-1.2/usr/share/ledgersmb-1.2/upgrade-templates.pl
