--- a/debian/control
+++ b/debian/control
@@ -4,14 +4,14 @@ Priority: optional
 Maintainer: Debian LedgerSMB Team <pkg-sql-ledger-discussion@lists.alioth.debian.org>
 Uploaders: Robert James Clay <jame@rocasa.us>
 Build-Depends: debhelper (>= 8), po-debconf, libmodule-install-perl
-Standards-Version: 3.9.4
+Standards-Version: 3.9.5
 Homepage: http://www.ledgersmb.org/
-Vcs-Svn: svn://svn.debian.org/pkg-sql-ledger/ledger-smb/trunk
+Vcs-Svn: svn://anonscm.debian.org/pkg-sql-ledger/ledger-smb/trunk
 Vcs-Browser: http://anonscm.debian.org/viewvc/pkg-sql-ledger/ledger-smb/trunk/
 
 Package: ledgersmb
 Architecture: all
-Depends: ${perl:Depends}, ${misc:Depends}, perl (>= 5.8.0-1), libconfig-std-perl,
+Depends: ${perl:Depends}, ${misc:Depends}, perl (>= 5.8.1-1), libconfig-std-perl,
   libconfig-any-perl, libmime-lite-perl, libdbi-perl, libdbd-pg-perl, liberror-perl,
   liblocale-maketext-lexicon-perl (>= 0.62-1), libtemplate-perl (>=2.14-1),
   libhtml-parser-perl, liblog-log4perl-perl, libdatetime-perl, apache2 | httpd-cgi,
@@ -19,7 +19,7 @@ Depends: ${perl:Depends}, ${misc:Depends}, perl (>= 5.8.0-1), libconfig-std-perl
   postgresql-client, postgresql-contrib, dbconfig-common
 Recommends: default-mta | mail-transport-agent, texlive-latex-recommended, libopenoffice-oodoc-perl,
   libmath-bigint-gmp-perl, libparse-recdescent-perl, libtemplate-plugin-latex-perl
-Suggests: postgresql, lpr, libnet-tclink-perl, latex-cjk-all,
+Suggests: postgresql, lpr, libnet-tclink-perl, latex-cjk-all, libplack-perl,
   libimage-size-perl
 Conflicts: ledger-smb
 Replaces: ledger-smb
