Include libjs-prototype & libjs-libjs-scriptaculous as Depends in d/control.

--- a/debian/control
+++ b/debian/control
@@ -23,6 +23,8 @@ Depends: apache2 | httpd-cgi,
          libfile-mimeinfo-perl,
          libhtml-parser-perl,
          libio-stringy-perl,
+         libjs-prototype,
+         libjs-scriptaculous,
          liblocale-maketext-lexicon-perl (>= 0.62-1),
          liblog-log4perl-perl,
          libmime-lite-perl,
