--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,12 @@ Section: web
 Priority: optional
 Maintainer: Debian LedgerSMB Team <pkg-sql-ledger-discussion@lists.alioth.debian.org>
 Uploaders: Robert James Clay <jame@rocasa.us>
-Build-Depends: debhelper (>= 8), po-debconf, libmodule-install-perl, dh-linktree
+Build-Depends: debhelper (>= 8),
+               po-debconf,
+               libmodule-install-perl,
+               dh-linktree.
+               libjs-prototype,
+               libjs-scriptaculous
 Standards-Version: 3.9.5
 Homepage: http://www.ledgersmb.org/
 Vcs-Svn: svn://anonscm.debian.org/pkg-sql-ledger/ledger-smb/trunk
