Add texlive-xetex as a 'Suggests' in debian/control.

--- a/debian/control
+++ b/debian/control
@@ -45,7 +45,8 @@ Recommends: default-mta | mail-transport-agent,
             libparse-recdescent-perl,
             libtemplate-plugin-latex-perl,
             texlive-latex-recommended
-Suggests: latex-cjk-all,
+Suggests: texlive-xetex,
+          latex-cjk-all,
           libimage-size-perl,
           libnet-tclink-perl,
           libplack-perl,
