Initial update for v1.4.x package dependenices in debian/control.

--- a/debian/control
+++ b/debian/control
@@ -7,8 +7,7 @@ Build-Depends: debhelper (>= 8),
                po-debconf,
                libmodule-install-perl,
                dh-linktree,
-               libjs-prototype,
-               libjs-scriptaculous
+               libjs-dojo-dojox
 Standards-Version: 3.9.6
 Homepage: http://www.ledgersmb.org/
 Vcs-Svn: svn://anonscm.debian.org/pkg-sql-ledger/ledger-smb/trunk
@@ -18,21 +17,24 @@ Package: ledgersmb-1.4
 Architecture: all
 Depends: apache2 | httpd-cgi,
          dbconfig-common,
+         libcarp-always-perl,
          libcgi-simple-perl,
-         libconfig-any-perl,
-         libconfig-std-perl,
+         libconfig-inifiles-perl
          libdatetime-perl,
+         libdatetime-format-strptime-perl,
          libdbd-pg-perl,
          libdbi-perl,
          liberror-perl,
          libfile-mimeinfo-perl,
          libhtml-parser-perl,
          libio-stringy-perl,
-         libjs-prototype,
-         libjs-scriptaculous,
+         libjs-dojo-dojox,
          liblocale-maketext-lexicon-perl (>= 0.62-1),
          liblog-log4perl-perl,
+         libnamespace-autoclean-perl,
          libmime-lite-perl,
+         libmoose-perl,
+         libnumber-format-perl,
          libtemplate-perl (>=2.14-1),
          perl (>= 5.8.1-1),
          postgresql-client,
@@ -44,9 +46,11 @@ Recommends: default-mta | mail-transport-agent,
             libopenoffice-oodoc-perl,
             libparse-recdescent-perl,
             libtemplate-plugin-latex-perl,
+            libtex-encode-perl,
             texlive-latex-recommended
 Suggests: texlive-xetex,
           latex-cjk-all,
+          libcgi-emulate-psgi-perl,
           libimage-size-perl,
           libnet-tclink-perl,
           libplack-perl,
