--- a/debian/control
+++ b/debian/control
@@ -16,7 +16,8 @@ Vcs-Browser: http://anonscm.debian.org/viewvc/pkg-sql-ledger/ledger-smb/trunk/
 
 Package: ledgersmb
 Architecture: all
-Pre-Depends: ${misc:Pre-Depends}
+Pre-Depends: dpkg (>= 1.15.7.2~),
+             ${misc:Pre-Depends}
 Depends: apache2 | httpd-cgi,
          dbconfig-common,
          libcgi-simple-perl,
