--- a/debian/control
+++ b/debian/control
@@ -15,6 +15,7 @@ Vcs-Browser: http://anonscm.debian.org/viewvc/pkg-sql-ledger/ledger-smb/trunk/
 
 Package: ledgersmb
 Architecture: all
+Pre-Depends: dpkg (>= 1.15.7.2)
 Depends: apache2 | httpd-cgi,
          dbconfig-common,
          libcarp-always-perl,
