--- a/debian/control
+++ b/debian/control
@@ -54,6 +54,7 @@ Suggests: texlive-xetex,
           libcgi-emulate-psgi-perl,
           libimage-size-perl,
           libnet-tclink-perl,
+          libx12-parser-perl,
           libplack-perl,
           postgresql,
           lpr
