--- a/ledger-smb/tags/1.3.46-1/debian/control
+++ b/ledger-smb/tags/1.3.46-1/debian/control
@@ -16,8 +16,8 @@ Vcs-Browser: http://anonscm.debian.org/viewvc/pkg-sql-ledger/ledger-smb/trunk/
 
 Package: ledgersmb
 Architecture: all
+Pre-Depends: dpkg (>= 1.15.7.2)
 Depends: apache2 | httpd-cgi,
-         dbconfig-common,
          libcgi-simple-perl,
          libconfig-any-perl,
          libconfig-std-perl,
