Add dependacy for JSON Perl module in debian/control.

--- a/debian/control
+++ b/debian/control
@@ -35,6 +35,7 @@ Depends: apache2 | httpd-cgi,
          libmime-lite-perl,
          libmoose-perl,
          libnumber-format-perl,
+         libjson-perl | libjson-xs-perl,
          libtemplate-perl (>=2.14-1),
          perl (>= 5.8.1-1),
          postgresql-client,
