--- a/debian/control
+++ b/debian/control
@@ -5,8 +5,7 @@ Maintainer: Debian LedgerSMB Team <pkg-sql-ledger-discussion@lists.alioth.debian
 Uploaders: Robert James Clay <jame@rocasa.us>
 Build-Depends: debhelper (>= 8),
                po-debconf,
-               libmodule-install-perl,
-               libjs-dojo-dojox
+               libmodule-install-perl
 Standards-Version: 3.9.6
 Homepage: http://www.ledgersmb.org/
 Vcs-Svn: svn://anonscm.debian.org/pkg-sql-ledger/ledger-smb/trunk
