Change texlive-xetex from 'Suggests' to 'Recommends' in debian/control.
Due to issues with the v0.200.4-1 version of the liblatex-driver-perl
package, change the texlive-xetex package from a 'Suggests' to a
'Recommends' in debian/control in order to work around some of the
issues that are caused by it.

--- a/debian/control
+++ b/debian/control
@@ -44,9 +44,9 @@ Recommends: default-mta | mail-transport-agent,
             libopenoffice-oodoc-perl,
             libparse-recdescent-perl,
             libtemplate-plugin-latex-perl,
-            texlive-latex-recommended
-Suggests: texlive-xetex,
-          latex-cjk-all,
+            texlive-latex-recommended,
+            texlive-xetex
+Suggests: latex-cjk-all,
           libimage-size-perl,
           libnet-tclink-perl,
           libplack-perl,
