--- a/debian/control
+++ b/debian/control
@@ -14,7 +14,8 @@ Vcs-Browser: https://anonscm.debian.org/viewvc/pkg-sql-ledger/ledger-smb/trunk/
 Package: ledgersmb
 Architecture: all
 Pre-Depends: dpkg (>= 1.15.7.2)
-Depends: libcarp-always-perl,
+Depends: apache2 | httpd-cgi,
+         libcarp-always-perl,
          libcgi-simple-perl,
          libcgi-emulate-psgi-perl,
          libconfig-inifiles-perl,
@@ -42,8 +43,7 @@ Depends: libcarp-always-perl,
          starman,
          ${misc:Depends},
          ${perl:Depends}
-Recommends: apache2 | httpd-cgi,
-            default-mta | mail-transport-agent,
+Recommends: default-mta | mail-transport-agent,
             libmath-bigint-gmp-perl,
             libopenoffice-oodoc-perl,
             libparse-recdescent-perl,
