--- a/debian/rules
+++ b/debian/rules
@@ -4,15 +4,14 @@
 	dh $@
 
 override_dh_auto_configure:
-	rm -f Build.PL
-	dh_auto_configure
+
+override_dh_auto_build:
 
 override_dh_auto_test:
 
 override_dh_auto_install:
 
 override_dh_install:
-	rm -f blib/lib/install_interactive.pl
 	dh_install -XMIT-LICENSE -XGPL.txt
 
 override_dh_fixperms:
@@ -31,5 +30,4 @@ override_dh_fixperms:
 	find debian/ledgersmb/usr/share/ledgersmb -name '*.sql' -exec chmod -x '{}' \;
 	find debian/ledgersmb/usr/share/ledgersmb/utils -name '*.pl*' -exec chmod +x '{}' \;
 	find debian/ledgersmb/usr/share/ledgersmb/templates -type d -empty -delete
-	chown -R www-data:www-data debian/ledgersmb/var/lib/ledgersmb
 
