--- a/debian/rules
+++ b/debian/rules
@@ -19,13 +19,12 @@ override_dh_fixperms:
 	chmod -x debian/ledgersmb/usr/share/ledgersmb/lsmb-request.pl
 	chmod -x debian/ledgersmb/usr/share/ledgersmb/bin/gl.pl
 	chmod -x debian/ledgersmb/usr/share/ledgersmb/locale/po/*
-	chmod -x debian/ledgersmb/usr/share/ledgersmb/locale/html/splash.html
-	chmod -x debian/ledgersmb/usr/share/ledgersmb/UI/Reports/*.html
 	chmod +x debian/ledgersmb/usr/share/ledgersmb/Reconciliation.pl
 	chmod +x debian/ledgersmb/usr/share/ledgersmb/tools/*.pl
 	chmod +x debian/ledgersmb/usr/share/ledgersmb/tools/*.psgi
 	chmod +x debian/ledgersmb/usr/share/ledgersmb/tools/system/lsmb*
 	find debian/ledgersmb/usr/share/ledgersmb -name '*.sh' -exec chmod +x '{}' \;
+	find debian/ledgersmb/usr/share/ledgersmb -name '*.html' -exec chmod -x '{}' \;
 	find debian/ledgersmb/usr/share/ledgersmb -name '*.pm' -exec chmod -x '{}' \;
 	find debian/ledgersmb/usr/share/ledgersmb -name '*.sql' -exec chmod -x '{}' \;
 	find debian/ledgersmb/usr/share/ledgersmb/utils -name '*.pl*' -exec chmod +x '{}' \;
