Exclude installation of 'install_interactive.pl' in debian/rules.

--- a/debian/rules
+++ b/debian/rules
@@ -13,7 +13,7 @@ override_dh_auto_test:
 override_dh_auto_install:
 
 override_dh_install:
-	dh_install -XMIT-LICENSE -XGPL.txt
+	dh_install -XMIT-LICENSE -XGPL.txt -Xinstall_interactive.pl
 
 override_dh_fixperms:
 	dh_fixperms
