--- a/t/data/ledgersmb.conf
+++ b/t/data/ledgersmb.conf
@@ -1,6 +1,6 @@
 auth : DB2
 logging  : 1
-#Be aware of tempdir setting.If client_browser and server_apache on same machine, sharing tmp-dir , problems 'Permission denied' if server tries to write temp-file wich already exists as client-owned
+#Be aware of tempdir setting.If client_browser and server_apache on same machine, sharing tmp-dir , problems 'Permission denied' if server tries to write temp-file which already exists as client-owned
 tempdir : test
 
 # This is the logical CSS directory.  I.e. it is what comes before the 
