--- a/debian/control
+++ b/debian/control
@@ -1,6 +1,6 @@
 Source: ledgersmb
 Section: web
-Priority: optional
+Priority: extra
 Maintainer: Debian LedgerSMB Team <pkg-sql-ledger-discussion@lists.alioth.debian.org>
 Uploaders: Robert James Clay <jame@rocasa.us>
 Build-Depends: debhelper (>= 9),
