Remove 'libmodule-install-perl' in Build-Depends of debian/control.

--- a/debian/control
+++ b/debian/control
@@ -4,8 +4,7 @@ Priority: extra
 Maintainer: Debian LedgerSMB Team <pkg-sql-ledger-discussion@lists.alioth.debian.org>
 Uploaders: Robert James Clay <jame@rocasa.us>
 Build-Depends: debhelper (>= 9),
-               po-debconf,
-               libmodule-install-perl
+               po-debconf
 Standards-Version: 3.9.8
 Homepage: http://www.ledgersmb.org/
 Vcs-Svn: svn://anonscm.debian.org/pkg-sql-ledger/ledger-smb/trunk
