--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,16 @@ sudo: false
 language: perl
 matrix:
   include:
+    - perl: '5.24'
+      addons:
+        postgresql: "9.3"
+      env:
+        - DB_TESTING=1
+    - perl: '5.22'
+      addons:
+        postgresql: "9.3"
+      env:
+        - DB_TESTING=1
     - perl: '5.20'
       addons:
         postgresql: "9.4"
@@ -31,6 +41,8 @@ matrix:
     - perl: '5.10'
       addons:
         postgresql: "9.3"
+      env:
+        - DB_TESTING=1
 
 before_install:
   - git clone git://github.com/travis-perl/helpers ~/travis-perl-helpers
