Move libjson-xs-perl from 'Depends' to 'Recommends' in debian/control.

--- a/debian/control
+++ b/debian/control
@@ -25,13 +25,13 @@ Depends: adduser,
          liberror-perl,
          libfile-mimeinfo-perl,
          libjs-dojo-dojox,
+         libjson-perl,
          liblocale-maketext-lexicon-perl (>= 0.62-1),
          liblog-log4perl-perl,
          libnamespace-autoclean-perl,
          libmime-lite-perl,
          libmoose-perl,
          libnumber-format-perl,
-         libjson-xs-perl | libjson-perl,
          libtemplate-perl (>=2.14-1),
          perl (>= 5.8.1-1),
          postgresql-client,
@@ -41,6 +41,7 @@ Depends: adduser,
          ${misc:Depends},
          ${perl:Depends}
 Recommends: default-mta | mail-transport-agent,
+            libjson-xs-perl,
             libmath-bigint-gmp-perl,
             libparse-recdescent-perl,
             libtemplate-plugin-latex-perl,
