--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Priority: extra
 Maintainer: Debian LedgerSMB Team <pkg-sql-ledger-discussion@lists.alioth.debian.org>
 Uploaders: Robert James Clay <jame@rocasa.us>
 Build-Depends: debhelper (>= 9),
-               dh-systemd,
+               dh-systemd (>= 1.5),
                po-debconf
 Standards-Version: 3.9.8
 Homepage: http://www.ledgersmb.org/
