Drop required version from Perl requirement in debian/control.
Drop required version for the Perl requirement in debian/control as the version
being required is currently too old to relevant to any current Debian release.

--- a/debian/control
+++ b/debian/control
@@ -34,7 +34,7 @@ Depends: adduser,
          libmoose-perl,
          libnumber-format-perl,
          libtemplate-perl (>=2.14-1),
-         perl (>= 5.8.1-1),
+         perl,
          postgresql-client,
          postgresql-contrib,
          starman,
