--- a/debian/control
+++ b/debian/control
@@ -32,6 +32,7 @@ Depends: adduser,
          libnamespace-autoclean-perl,
          libmime-lite-perl,
          libmoose-perl,
+         libmoosex-nonmoose-perl,
          libnumber-format-perl,
          libtemplate-perl (>=2.14-1),
          perl,
