Include 'libtry-tiny-perl' as a Depends in debian/control.

--- a/debian/control
+++ b/debian/control
@@ -35,6 +35,7 @@ Depends: adduser,
          libmoosex-nonmoose-perl,
          libnumber-format-perl,
          libtemplate-perl (>=2.14-1),
+         libtry-tiny-perl,
          perl,
          postgresql-client,
          postgresql-contrib,
