--- a/debian/control
+++ b/debian/control
@@ -34,6 +34,14 @@ Depends: adduser,
          libmoose-perl,
          libmoosex-nonmoose-perl,
          libnumber-format-perl,
+         libpgobject-perl,
+         libpgobject-simple-perl,
+         libpgobject-simple-role-perl,
+         libpgobject-type-bigfloat-perl,
+         libpgobject-type-bytestring-perl,
+         libpgobject-type-datetime-perl,
+         libpgobject-util-dbmethod-perl,
+         libpgobject-util-dbadmin-perl,
          libtemplate-perl (>=2.14-1),
          libtry-tiny-perl,
          perl,
