Include 'libplack-perl' as a Depends in debian/control.

--- a/debian/control
+++ b/debian/control
@@ -42,6 +42,7 @@ Depends: adduser,
          libpgobject-type-datetime-perl,
          libpgobject-util-dbmethod-perl,
          libpgobject-util-dbadmin-perl,
+         libplack-perl,
          libtemplate-perl (>=2.14-1),
          libtry-tiny-perl,
          perl,
