Update dojo requirement from libjs-dojo-dojox to libjs-dojo-dijit in d/control.

--- a/debian/control
+++ b/debian/control
@@ -25,7 +25,7 @@ Depends: adduser,
          libdbi-perl,
          libfile-mimeinfo-perl,
          libhttp-exception-perl,
-         libjs-dojo-dojox,
+         libjs-dojo-dijit,
          libjson-perl,
          liblocale-maketext-lexicon-perl (>= 0.62-1),
          liblog-log4perl-perl,
