--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: ledgersmb
 Section: web
 Priority: extra
-Maintainer: Debian LedgerSMB Team <pkg-sql-ledger-discussion@lists.alioth.debian.org>
+Maintainer: Development discussion for LedgerSMB <ledger-smb-devel@lists.sourceforge.net>
 Uploaders: Robert James Clay <jame@rocasa.us>
 Build-Depends: debhelper (>= 9),
                dh-systemd (>= 1.5),
