--- a/debian/control
+++ b/debian/control
@@ -44,6 +44,7 @@ Depends: adduser,
          libpgobject-util-dbmethod-perl,
          libpgobject-util-dbadmin-perl,
          libplack-perl,
+         libplack-builder-conditionals-perl,
          libtemplate-perl (>=2.14-1),
          libtry-tiny-perl,
          perl,
