Update dependendcies in debian/control for new 1.5.x upstream series.

--- a/debian/control
+++ b/debian/control
@@ -35,11 +35,11 @@ Depends: adduser,
          libmoose-perl,
          libmoosex-nonmoose-perl,
          libnumber-format-perl,
-         libpgobject-perl,
-         libpgobject-simple-perl,
-         libpgobject-simple-role-perl,
+         libpgobject-perl (>= 1.403.2-1,
+         libpgobject-simple-perl (>= 3.000002-1),
+         libpgobject-simple-role-perl (>= 2.000000-1,
          libpgobject-type-bigfloat-perl,
-         libpgobject-type-bytestring-perl,
+         libpgobject-type-bytestring-perl (>= 1.1.1-1,
          libpgobject-type-datetime-perl,
          libpgobject-util-dbmethod-perl,
          libpgobject-util-dbadmin-perl,
@@ -47,6 +47,7 @@ Depends: adduser,
          libplack-builder-conditionals-perl,
          libtemplate-perl (>=2.14-1),
          libtry-tiny-perl,
+         libxml-simple-perl,
          perl,
          postgresql-client,
          postgresql-contrib,
@@ -54,25 +55,23 @@ Depends: adduser,
          ucf,
          ${misc:Depends},
          ${perl:Depends}
-Recommends: default-mta | mail-transport-agent,
-            libjson-xs-perl,
+Recommends: libjson-xs-perl,
             liblatex-driver-perl (>= 0.300.2),
             libmath-bigint-gmp-perl,
-            libparse-recdescent-perl,
-            libtemplate-plugin-latex-perl,
+            libtemplate-plugin-latex-perl (>=3.09-1),
             libtex-encode-perl,
-            texlive-latex-recommended,
-            texlive-xetex
-Suggests: ledgersmb-1.5-apache | ledgersmb-1.5-nginx,
+            texlive-latex-recommended
+Suggests: default-mta | mail-transport-agent,
           latex-cjk-all,
-          libcgi-emulate-psgi-perl,
+          ledgersmb-1.5-apache | ledgersmb-1.5-nginx
           libimage-size-perl,
           libopenoffice-oodoc-perl,
           libx12-parser-perl,
           libplack-perl,
           postgresql,
           lpr,
-          starlet
+          postgresql,
+          texlive-xetex
 Description: financial accounting and ERP program
  LedgerSMB is a double-entry financial accounting and Enterprise Resource
  Planning system which offers "Accounts Receivable", "Accounts Payable" and
